--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <!--meta:vp  直接出-->
-    <title>场景一</title>
+    <title>穆莹简历</title>
     <link rel="stylesheet" href="index.css"/>
     <meta name ="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
 </head>
